Auth done fully
